--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci.yml
 name: CI
 
 on:
@@ -25,9 +26,6 @@ jobs:
 
       - name: Type check
         run: npx tsc --noEmit
-
-      - name: Lint
-        run: npm run lint
 
       - name: Build
         run: npm run build
